# foundry-pool-rs

./: Cargo.toml  README.md  generate.sh  openapi-spec-6.0.json  openapi-spec.json
.openapi-generator/: FILES
docs/: AccessToken.md  AccessTokenApi.md  ActivityLogEntryV2.md  ActivityLogResponseV2.md  ActivityLogResponseV2WithTotal.md  ActivityLogsApi.md  ActivityTypesEnumResponse.md  AddUserToSubAccountRequest.md  AdminRole.md  AlertInfo.md  AlertResponse.md  AlertsApi.md  AlertsListResponse.md  ApprovalsApi.md  AuthenticationApi.md  BalanceResponse.md  CoinsApi.md  CumulativeSubAccountStats.md  EarningResponse.md  FinancialApi.md  GrantedSubAccountListResponse.md  Group.md  GroupThresholdUpdateResponse.md  GroupWithUsersResponseV2.md  HashrateResponse.md  HashrateWithPpsBaseAmountResponse.md  NewUserRequestV2.md  PoolApi.md  PoolStats.md  SubAccountAccessRequest.md  SubAccountApi.md  SubAccountFinancialStatsResponse.md  SubAccountNameAndRole.md  SubAccountSettingsApi.md  SubAccountStatsWithRoleResponse.md  SubAccountStatsWithoutOwnersResponse.md  SubAccountsApi.md  SubAccountsFinancialStatsResponse.md  TagAlertResponse.md  TagAlertsResponse.md  (+24 more)
src/apis/: access_token_api.rs  activity_logs_api.rs  alerts_api.rs  approvals_api.rs  authentication_api.rs  coins_api.rs  configuration.rs  financial_api.rs  mod.rs  pool_api.rs  sub_account_api.rs  sub_account_settings_api.rs  sub_accounts_api.rs  user_api.rs  wallets_api.rs  workers_api.rs
src/models/: access_token.rs  activity_log_entry_v2.rs  activity_log_response_v2.rs  activity_log_response_v2_with_total.rs  group.rs  (+46 more)
